Fixed artwork order on mobile

--- a/src/output.css
+++ b/src/output.css
@@ -2010,6 +2010,10 @@ video {
   grid-template-columns: repeat(10, minmax(0, 1fr));
 }
 
+.grid-cols-subgrid {
+  grid-template-columns: subgrid;
+}
+
 .grid-rows-1 {
   grid-template-rows: repeat(1, minmax(0, 1fr));
 }
@@ -9035,6 +9039,10 @@ a {
 
   .md\:mt-8 {
     margin-top: 2rem;
+  }
+
+  .md\:hidden {
+    display: none;
   }
 
   .md\:h-16 {
